# poc-swfaws

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIAGRAMS.md  EXAMPLES.md  FAQ.md  INDEX.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  activity_worker.py  config.py  decision_worker.py  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.py  swf_client.py  workflow_starter.py
.github/workflows/: ci.yml  gitflow.yml  security.yml
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_activity_worker.py  test_config.py  test_swf_client.py
