[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-swfaws"
version = "0.1.0"
description = "POC de workflows bidirecionais com AWS SWF (Boto3 + Terraform)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "rafaelakio" }]
dependencies = [
    "boto3>=1.34.10",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "moto[swf]>=5.0",
    "black>=24.3",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
]

[tool.setuptools]
py-modules = [
    "config",
    "swf_client",
    "activity_worker",
    "decision_worker",
    "workflow_starter",
    "setup",
    "demo",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
# Aplicado apenas a testes e novos arquivos por ora; código legado
# permanece no estilo original até ser refatorado em PRs dedicados.
include = '(tests/.*\.py$)'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["config", "swf_client", "activity_worker", "decision_worker", "workflow_starter"]
skip = [
    "activity_worker.py",
    "decision_worker.py",
    "workflow_starter.py",
    "swf_client.py",
    "config.py",
    "demo.py",
    "setup.py",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    "terraform",
    "build",
    "dist",
    "activity_worker.py",
    "decision_worker.py",
    "workflow_starter.py",
    "swf_client.py",
    "config.py",
    "demo.py",
    "setup.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "terraform/*",
    "setup.py",
    "demo.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["terraform/", "build/", "dist/"]
